# cpp_uda

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  README.org
app/: CMakeLists.txt  jamfile  main.cpp  main_console.cpp  main_console_lager.cpp  main_ftxui.cpp  main_imgui_lager.cpp  persist.hpp
lib/: CMakeLists.txt  jamfile
lib/console/: console.cpp  console.hpp  console.test.cpp  main.test.cpp
lib/counter/: counter.cpp  counter.hpp  counter.test.cpp  main.test.cpp
lib/ftx/: ftx.cpp  ftx.hpp  ftx.test.cpp  main.test.cpp
lib/imgui/: imgui.cpp  imgui.hpp  imgui.test.cpp  main.test.cpp
lib/lib/: lib.cpp  lib.hpp  lib.test.cpp
lib/model/: main.test.cpp  model.cpp  model.hpp  model.test.cpp
