add_executable(app_console)
target_sources(app_console PRIVATE "main_console.cpp")
target_link_libraries(app_console PRIVATE lib::counter)
target_link_libraries(app_console PRIVATE lib::console)

find_package(Lager CONFIG REQUIRED)
add_executable(app_console_lager)
target_sources(app_console_lager PRIVATE "main_console_lager.cpp")
target_link_libraries(app_console_lager PRIVATE lib::counter)
target_link_libraries(app_console_lager PRIVATE lib::console)
target_link_libraries(app_console_lager PRIVATE lager)
