add_executable(app_console)
target_sources(app_console PRIVATE "main_console.cpp")
target_link_libraries(app_console PRIVATE lib::model)
target_link_libraries(app_console PRIVATE lib::console)

find_package(Lager CONFIG REQUIRED)
add_executable(app_console_lager)
target_sources(app_console_lager PRIVATE "main_console_lager.cpp")
target_link_libraries(app_console_lager PRIVATE lib::model)
target_link_libraries(app_console_lager PRIVATE lib::console)
target_link_libraries(app_console_lager PRIVATE lager)

find_package(ftxui CONFIG REQUIRED)
add_executable(app_ftxui)
target_sources(app_ftxui PRIVATE "main_ftxui.cpp")
target_link_libraries(app_ftxui PRIVATE lib::model)
target_link_libraries(app_ftxui PRIVATE lib::counter)
target_link_libraries(app_ftxui PRIVATE ftxui::dom ftxui::screen ftxui::component)

find_package(Lager CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)
find_package(OpenGL REQUIRED)
add_executable(app_imgui_lager)
target_sources(app_imgui_lager PRIVATE "main_imgui_lager.cpp")
target_link_libraries(app_imgui_lager PRIVATE lib::model)
target_link_libraries(app_imgui_lager PRIVATE lager)
target_link_libraries(app_imgui_lager PRIVATE imgui::imgui)
target_link_libraries(app_imgui_lager PRIVATE OpenGL::GL)
